Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <h1>
 <a id="image-converter" class="anchor" href="#image-converter" aria-hidden="true"><span class="octicon octicon-link"></span></a>Image Converter</h1>
 
-<p><img src="demo/head.jpeg" alt="original image"></p>
+<p><img src="/demo/head.jpeg" alt="original image"></p>
 
 <p>80 x 80 -&gt; 100 x 80</p>
 
-<p><img src="demo/out_head.jpeg" alt="resize image"></p>
+<p><img src="/demo/out_head.jpeg" alt="resize image"></p>
 
-<p><img src="images/imageConverter.png" alt="imageConverter.png"></p>
+<p><img src="/images/imageConverter.png" alt="imageConverter.png"></p>
 
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h2>
